--- a/module_4/pytest.ini
+++ b/module_4/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -q --cov=module_4/src --cov-report=term-missing --cov-fail-under=100
+addopts = -q --cov=src --cov-report=term-missing --cov-fail-under=100
 
 markers =
     web: Flask route/page tests
@@ -7,3 +7,8 @@ markers =
     analysis: formatting/rounding of analysis output
     db: database schema/inserts/selects
     integration: end-to-end flows
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    if __name__ == .__main__.:
