--- a/module_5/requirements.txt
+++ b/module_5/requirements.txt
@@ -1,12 +1,27 @@
-# Web framework
-flask==3.0.3
-
-# PostgreSQL – psycopg3 (required by assignment; replaces psycopg2)
-psycopg[binary]==3.2.3
-
-# Testing
+astroid==4.0.4
+beautifulsoup4==4.12.3
+blinker==1.9.0
+click==8.3.1
+coverage==7.13.4
+dill==0.4.1
+Flask==3.0.3
+iniconfig==2.3.0
+isort==8.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+mccabe==0.7.0
+packaging==26.0
+platformdirs==4.9.2
+pluggy==1.6.0
+psycopg==3.2.3
+psycopg-binary==3.2.3
+pydeps==3.0.2
+pylint==4.0.5
 pytest==8.3.3
 pytest-cov==5.0.0
-
-# HTML parsing for Flask page tests
-beautifulsoup4==4.12.3
+soupsieve==2.8.3
+stdlib-list==0.12.0
+tomlkit==0.14.0
+typing_extensions==4.15.0
+Werkzeug==3.1.6
